# proton-vpn-binary-status

./: .gitignore  .index.html  .publishignore  .trunk.toml  CODEOWNERS  Cargo.toml  README.md
.cargo/: config.toml
src/: bindings_cffi.rs  bindings_uniffi.rs  compute_loads.rs  compute_score.rs  coord.rs  country.rs  country_code.rs  error.rs  jitter.rs  lib.rs  load.rs  location.rs  logical.rs
src/status/: mod.rs  parser.rs  server_status.rs
src/test_utils/: mod.rs
src/test_utils/backend/: compute_variance.rs  endpoints.rs  mod.rs  v1.rs  v2.rs
src/test_utils/webview/: app.rs  display.rs  login.rs  mod.rs
tests/: test_ranking_order.rs  test_scores_match.rs
tests/resources/endpoints/vpn/v1/: logicals
tests/resources/endpoints/vpn/v2/: logicals
tests/resources/endpoints/vpn/v2/status/2f93aaaa-ada2-4adb-b463-f4b32425e191/: binary
tests/resources/endpoints_exact/vpn/v1/: logicals
tests/resources/endpoints_exact/vpn/v2/: logicals
tests/resources/endpoints_exact/vpn/v2/status/2f93aaaa-ada2-4adb-b463-f4b32425e191/: binary
tests/resources/endpoints_variable/vpn/v1/: logicals
tests/resources/endpoints_variable/vpn/v2/: logicals
tests/resources/endpoints_variable/vpn/v2/status/2f93aaaa-ada2-4adb-b463-f4b32425e191/: binary
